<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_registration"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/abc_text_size_headline_material" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="4"
        android:layout_marginBottom="@dimen/view_vertical_margin"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_name"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:textCursorDrawable="@null"
            android:backgroundTint="@color/colorPrimary"
            android:id="@+id/nameField" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_last_name"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:textCursorDrawable="@null"
            android:backgroundTint="@color/colorPrimary"
            android:id="@+id/lastnameField" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_email"
            android:textColor="@color/colorPrimary"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:backgroundTint="@color/colorPrimary"
            android:textCursorDrawable="@null"
            android:id="@+id/emailField" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_password"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:backgroundTint="@color/colorPrimary"
            android:textCursorDrawable="@null"
            android:id="@+id/passwordField" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_password_confirm"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:backgroundTint="@color/colorPrimary"
            android:textCursorDrawable="@null"
            android:id="@+id/passwordConfirmField" />
    </GridLayout>

    <TextView
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/view_vertical_margin"
        android:layout_marginTop="20dp"
        android:background="@drawable/verification_circle"
        android:gravity="center"
        android:text="Register!"
        android:textColor="@color/colorPrimary" />

</LinearLayout>
